feat: adapt Fabric build to Minecraft 1.16.5