@@ -3,24 +3,32 @@ package com.lumoren.dglabcraft.gui;
 import com.lumoren.dglabcraft.config.ModConfig;
 import com.lumoren.dglabcraft.network.WebSocketServerManager;
 import com.lumoren.dglabcraft.util.QRCodeGenerator;
+import com.mojang.blaze3d.platform.NativeImage;
+import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.blaze3d.vertex.PoseStack;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.renderer.texture.DynamicTexture;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.FormattedCharSequence;
 
 import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.ArrayList;
+import java.util.List;
 
+/**
+ * DGLab Craft 连接设置界面
+ * 显示连接状态和二维码
+ */
 public class ConnectionScreen extends Screen {
-    private static final int BUTTON_HEIGHT = 20;
-    private static final int BUTTON_VERTICAL_SPACING = 4;
-    private static final int SECTION_VERTICAL_SPACING = 4;
-    private static final int DONE_BUTTON_BOTTOM_MARGIN = 30;
-    private static final int QR_BUTTON_COUNT = 3;
-
     private static final Component MANUAL_IP_HINT = new TranslatableComponent("hint.dglabcraft.manual_ip")
         .withStyle(ChatFormatting.GRAY, ChatFormatting.ITALIC);
 
@@ -31,6 +39,13 @@ public class ConnectionScreen extends Screen {
     private Button doneButton;
     private EditBox manualIpInput;
     private boolean manualIpInvalid = false;
+    private ResourceLocation qrTextureLocation;
+    private long qrTextureModifiedAt = -1L;
+    private int qrTextureWidth = 0;
+    private int qrTextureHeight = 0;
+    private int helpScrollOffset = 0;
+    private int maxHelpScroll = 0;
+    private ConnectionLayout.Layout currentLayout;
 
     public ConnectionScreen(Screen parent) {
         super(new TranslatableComponent("screen.dglabcraft.connection_settings"));
@@ -41,59 +56,62 @@ public class ConnectionScreen extends Screen {
     protected void init() {
         super.init();
 
-        int centerX = this.width / 2;
-        int buttonWidth = 200;
-        int manualInputY = getManualInputY();
-        int doneButtonY = getDoneButtonY();
-        int qrButtonStartY = getQrButtonStartY(doneButtonY);
+        ConnectionLayout.Layout layout = ConnectionLayout.calculate(this.width, this.height);
+        this.currentLayout = layout;
+        this.helpScrollOffset = 0;
 
         WebSocketServerManager server = WebSocketServerManager.getInstance();
 
-        this.manualIpInput = new EditBox(this.font, centerX - buttonWidth / 2, manualInputY, buttonWidth, BUTTON_HEIGHT,
-            new TranslatableComponent("label.dglabcraft.manual_lan_ip"));
+        ConnectionLayout.Rect manualInput = layout.manualInput();
+        this.manualIpInput = new EditBox(this.font, manualInput.x(), manualInput.y(), manualInput.width(), manualInput.height(), new TranslatableComponent("label.dglabcraft.manual_lan_ip"));
         String currentHost = ModConfig.WS_HOST.get();
-        if (currentHost != null && !currentHost.isBlank() && !"localhost".equalsIgnoreCase(currentHost)) {
+        if (currentHost != null && !currentHost.trim().isEmpty() && !"localhost".equalsIgnoreCase(currentHost)) {
             this.manualIpInput.setValue(currentHost);
         }
-        this.addRenderableWidget(this.manualIpInput);
+        this.manualIpInput.setSuggestion(MANUAL_IP_HINT.getString());
+        this.addButton(this.manualIpInput);
 
         if (!server.isConnected()) {
             ensureQrCodeGenerated();
         }
 
-        this.refreshQrButton = new Button(centerX - buttonWidth / 2, getQrButtonY(0, qrButtonStartY),
-            buttonWidth, BUTTON_HEIGHT, new TranslatableComponent("button.dglabcraft.refresh_qr"),
-            button -> {
-                if (commitManualIpInput()) {
-                    ensureQrCodeGenerated();
-                }
-            });
-        this.addRenderableWidget(this.refreshQrButton);
+        // 刷新二维码按钮
+        ConnectionLayout.Rect refresh = layout.controlButtons().get(0);
+        this.refreshQrButton = new Button(refresh.x(), refresh.y(), refresh.width(), refresh.height(),
+            new TranslatableComponent("button.dglabcraft.refresh_qr"), button -> {
+            if (commitManualIpInput()) {
+                ensureQrCodeGenerated();
+            }
+        });
+        this.addButton(this.refreshQrButton);
 
-        this.openQrButton = new Button(centerX - buttonWidth / 2, getQrButtonY(1, qrButtonStartY),
-            buttonWidth, BUTTON_HEIGHT, new TranslatableComponent("button.dglabcraft.open_qr_image"),
-            button -> {
-                File qrFile = getQrCodeFile();
-                if (qrFile.isFile()) {
-                    net.minecraft.Util.getPlatform().openFile(qrFile);
-                }
-            });
-        this.addRenderableWidget(this.openQrButton);
+        // 打开二维码按钮
+        ConnectionLayout.Rect open = layout.controlButtons().get(1);
+        this.openQrButton = new Button(open.x(), open.y(), open.width(), open.height(),
+            new TranslatableComponent("button.dglabcraft.open_qr_image"), button -> {
+            File qrFile = getQrCodeFile();
+            if (qrFile.isFile()) {
+                net.minecraft.Util.getPlatform().openFile(qrFile);
+            }
+        });
+        this.addButton(this.openQrButton);
 
-        this.openQrFolderButton = new Button(centerX - buttonWidth / 2, getQrButtonY(2, qrButtonStartY),
-            buttonWidth, BUTTON_HEIGHT, new TranslatableComponent("button.dglabcraft.open_qr_folder"),
-            button -> {
-                File qrFile = getQrCodeFile();
-                File qrFolder = qrFile.getParentFile();
-                if (qrFolder != null && qrFolder.isDirectory()) {
-                    net.minecraft.Util.getPlatform().openFile(qrFolder);
-                }
-            });
-        this.addRenderableWidget(this.openQrFolderButton);
+        ConnectionLayout.Rect openFolder = layout.controlButtons().get(2);
+        this.openQrFolderButton = new Button(openFolder.x(), openFolder.y(), openFolder.width(), openFolder.height(),
+            new TranslatableComponent("button.dglabcraft.open_qr_folder"), button -> {
+            File qrFile = getQrCodeFile();
+            File qrFolder = qrFile.getParentFile();
+            if (qrFolder != null && qrFolder.isDirectory()) {
+                net.minecraft.Util.getPlatform().openFile(qrFolder);
+            }
+        });
+        this.addButton(this.openQrFolderButton);
 
-        this.doneButton = new Button(centerX - buttonWidth / 2, doneButtonY, buttonWidth, BUTTON_HEIGHT,
+        // 完成按钮
+        ConnectionLayout.Rect done = layout.doneButton();
+        this.doneButton = new Button(done.x(), done.y(), done.width(), done.height(),
             new TranslatableComponent("button.dglabcraft.done"), button -> this.onClose());
-        this.addRenderableWidget(this.doneButton);
+        this.addButton(this.doneButton);
     }
 
     @Override
@@ -124,6 +142,7 @@ public class ConnectionScreen extends Screen {
     private void ensureQrCodeGenerated() {
         WebSocketServerManager server = WebSocketServerManager.getInstance();
         server.generateQrUrl();
+        unloadQrTexture();
         if (this.manualIpInput != null) {
             this.manualIpInput.setSuggestion(MANUAL_IP_HINT.getString());
         }
@@ -153,39 +172,12 @@ public class ConnectionScreen extends Screen {
         this.renderBackground(poseStack);
 
         int centerX = this.width / 2;
+        ConnectionLayout.Layout layout = ConnectionLayout.calculate(this.width, this.height);
+        this.currentLayout = layout;
         WebSocketServerManager server = WebSocketServerManager.getInstance();
         boolean isConnected = server.isConnected();
 
-        drawCenteredString(poseStack, this.font, new TranslatableComponent("screen.dglabcraft.connection_settings"), centerX, 30, 0xFFFFFF);
-        drawCenteredString(poseStack, this.font,
-            new TranslatableComponent(isConnected ? "status.dglabcraft.connected" : "status.dglabcraft.waiting_connection"),
-            centerX, 50, isConnected ? 0x00FF00 : 0xFFFF00);
-        drawCenteredString(poseStack, this.font,
-            new TranslatableComponent("label.dglabcraft.address", server.resolveConnectionHost(), server.getPort()),
-            centerX, 70, 0xAAAAAA);
-
-        if (!isConnected) {
-            drawCenteredString(poseStack, this.font, new TranslatableComponent("message.dglabcraft.scan_qr"), centerX, 82, 0xAAAAAA);
-
-            File qrFile = getQrCodeFile();
-            if (qrFile.isFile()) {
-                renderQrPath(poseStack, centerX, 94, qrFile);
-            }
-        }
-
-        if (manualIpInvalid) {
-            drawCenteredString(poseStack, this.font, new TranslatableComponent("error.dglabcraft.invalid_manual_ip"),
-                centerX, this.height / 2 + 2, 0xFF5555);
-        }
-
-        if (isConnected) {
-            String clientId = server.getConnectedClientId();
-            if (clientId != null) {
-                drawCenteredString(poseStack, this.font, new TranslatableComponent("label.dglabcraft.device", clientId),
-                    centerX, 90, 0xAAAAAA);
-            }
-        }
-
+        // 已连接时隐藏二维码按钮
         if (this.refreshQrButton != null) {
             this.refreshQrButton.visible = !isConnected;
         }
@@ -197,6 +189,39 @@ public class ConnectionScreen extends Screen {
         }
 
         super.render(poseStack, mouseX, mouseY, partialTick);
+
+        drawCenteredString(poseStack, this.font, new TranslatableComponent("screen.dglabcraft.connection_settings"),
+            centerX, ConnectionLayout.HEADER_TITLE_Y, 0xFFFFFF);
+
+        Component statusText;
+        int statusColor;
+        if (isConnected) {
+            statusText = new TranslatableComponent("status.dglabcraft.connected");
+            statusColor = 0x00FF00;
+        } else {
+            statusText = new TranslatableComponent("status.dglabcraft.waiting_connection");
+            statusColor = 0xFFFF00;
+        }
+        drawCenteredString(poseStack, this.font, statusText, centerX, ConnectionLayout.HEADER_STATUS_Y, statusColor);
+
+        drawCenteredString(poseStack, this.font, new TranslatableComponent("label.dglabcraft.address",
+            server.resolveConnectionHost(), server.getPort()), centerX, ConnectionLayout.HEADER_ADDRESS_Y, 0xAAAAAA);
+
+        if (!isConnected) {
+            File qrFile = getQrCodeFile();
+            renderQrPanel(poseStack, layout, qrFile);
+            renderConnectionHelp(poseStack, layout);
+        } else {
+            this.maxHelpScroll = 0;
+            this.helpScrollOffset = 0;
+        }
+
+        if (isConnected) {
+            String clientId = server.getConnectedClientId();
+            if (clientId != null) {
+                drawCenteredString(poseStack, this.font, new TranslatableComponent("label.dglabcraft.device", clientId), centerX, 90, 0xAAAAAA);
+            }
+        }
     }
 
     private File getQrCodeFile() {
@@ -216,71 +241,171 @@ public class ConnectionScreen extends Screen {
         return qrFolder != null && qrFolder.isDirectory();
     }
 
-    private int getDoneButtonY() {
-        return this.height - DONE_BUTTON_BOTTOM_MARGIN;
+    private void renderQrPanel(PoseStack poseStack, ConnectionLayout.Layout layout, File qrFile) {
+        ConnectionLayout.Rect panel = layout.qrPanel();
+        ConnectionLayout.Rect qr = layout.qrImage();
+        fill(poseStack, panel.x() - 2, panel.y() - 2, panel.right() + 2, panel.bottom() + 2, 0xFF111111);
+        fill(poseStack, panel.x(), panel.y(), panel.right(), panel.bottom(), 0xFFFFFFFF);
+
+        if (qrFile.isFile() && loadQrTexture(qrFile)) {
+            Minecraft.getInstance().getTextureManager().bind(qrTextureLocation);
+            blit(poseStack, layout.qrImage().x(), layout.qrImage().y(),
+                layout.qrImage().width(), layout.qrImage().height(), 0.0F, 0.0F,
+                qrTextureWidth, qrTextureHeight, qrTextureWidth, qrTextureHeight);
+        } else {
+            drawCenteredString(poseStack, this.font, new TranslatableComponent("message.dglabcraft.scan_qr"),
+                qr.x() + qr.width() / 2, qr.y() + qr.height() / 2 - 4, 0x555555);
+        }
     }
 
-    private int getManualInputY() {
-        return this.height / 2 - 10;
-    }
+    private void renderConnectionHelp(PoseStack poseStack, ConnectionLayout.Layout layout) {
+        ConnectionLayout.Rect controls = layout.controls();
+        Component manualLabel = manualIpInvalid
+            ? new TranslatableComponent("error.dglabcraft.invalid_manual_ip")
+            : new TranslatableComponent("label.dglabcraft.manual_lan_ip");
+        int manualLabelColor = manualIpInvalid ? 0xFF5555 : 0xAAAAAA;
+        drawCenteredString(poseStack, this.font, manualLabel,
+            controls.x() + controls.width() / 2, layout.manualLabelY(), manualLabelColor);
 
-    private int getQrButtonStartY(int doneButtonY) {
-        int minY = getManualInputY() + BUTTON_HEIGHT + SECTION_VERTICAL_SPACING;
-        int maxY = doneButtonY - SECTION_VERTICAL_SPACING - getQrButtonBlockHeight();
-        return Math.max(minY, maxY);
-    }
-
-    private int getQrButtonY(int index, int qrButtonStartY) {
-        return qrButtonStartY + index * (BUTTON_HEIGHT + BUTTON_VERTICAL_SPACING);
-    }
-
-    private int getQrButtonBlockHeight() {
-        return QR_BUTTON_COUNT * BUTTON_HEIGHT + (QR_BUTTON_COUNT - 1) * BUTTON_VERTICAL_SPACING;
-    }
-
-    private void renderQrPath(PoseStack poseStack, int centerX, int startY, File qrFile) {
-        int maxTextWidth = Math.max(120, this.width - 40);
-        drawCenteredString(poseStack, this.font, new TranslatableComponent("label.dglabcraft.qr_file"), centerX, startY, 0xAAAAAA);
-        drawCenteredString(poseStack, this.font, fitTextToWidth(qrFile.getAbsolutePath(), maxTextWidth), centerX, startY + 12, 0xAAAAAA);
-    }
-
-    private String fitTextToWidth(String text, int maxWidth) {
-        if (this.font.width(text) <= maxWidth) {
-            return text;
+        ConnectionLayout.Rect viewport = layout.helpViewport();
+        if (viewport.height() <= 0) {
+            this.maxHelpScroll = 0;
+            this.helpScrollOffset = 0;
+            return;
         }
 
-        String ellipsis = "...";
-        int targetWidth = maxWidth - this.font.width(ellipsis);
-        if (targetWidth <= 0) {
-            return ellipsis;
-        }
+        List<HelpLine> lines = buildHelpLines(Math.max(40, viewport.width() - 16));
+        int contentHeight = lines.stream().mapToInt(HelpLine::height).sum();
+        this.maxHelpScroll = DiagnosticLayout.maxScroll(contentHeight, viewport.y(), viewport.bottom());
+        this.helpScrollOffset = DiagnosticLayout.clampScroll(this.helpScrollOffset, this.maxHelpScroll);
 
-        int left = 0;
-        int right = text.length();
-        String prefix = "";
-        String suffix = "";
-
-        while (left < right && this.font.width(prefix + suffix) < targetWidth) {
-            if ((left + (text.length() - right)) % 2 == 0) {
-                prefix += text.charAt(left++);
-            } else {
-                suffix = text.charAt(--right) + suffix;
+        int centerX = viewport.x() + viewport.width() / 2;
+        int y = viewport.y() - this.helpScrollOffset;
+        enableScissor(viewport);
+        for (HelpLine line : lines) {
+            if (line.text() != null && y + line.height() > viewport.y() && y < viewport.bottom()) {
+                this.font.draw(poseStack, line.text(), centerX - this.font.width(line.text()) / 2.0F, y, line.color());
             }
+            y += line.height();
+        }
+        RenderSystem.disableScissor();
+        renderHelpScrollBar(poseStack, viewport, contentHeight);
+    }
 
-            while (!suffix.isEmpty() && this.font.width(prefix + suffix) > targetWidth) {
-                suffix = suffix.substring(1);
-            }
+    private List<HelpLine> buildHelpLines(int maxWidth) {
+        List<HelpLine> lines = new ArrayList<>();
+        addWrappedHelpLine(lines, new TranslatableComponent("section.dglabcraft.connection_guide"), maxWidth, 0xFFFF55, 13);
+        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step1"), maxWidth, 0xAAAAAA, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step2"), maxWidth, 0xAAAAAA, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step3"), maxWidth, 0xAAAAAA, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step4"), maxWidth, 0xDDDDDD, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step5"), maxWidth, 0xFFFF55, 11);
+        lines.add(new HelpLine(null, 0, 5));
+        addWrappedHelpLine(lines, new TranslatableComponent("section.dglabcraft.connection_troubleshooting"), maxWidth, 0xFF6666, 13);
+        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.same_wifi"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.firewall"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.manual_ip"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.port"), maxWidth, 0xFF7777, 11);
+        return lines;
+    }
+
+    private void addWrappedHelpLine(List<HelpLine> lines, Component text, int maxWidth, int color, int lineHeight) {
+        for (FormattedCharSequence wrappedLine : this.font.split(text, maxWidth)) {
+            lines.add(new HelpLine(wrappedLine, color, lineHeight));
+        }
+    }
+
+    private void renderHelpScrollBar(PoseStack poseStack, ConnectionLayout.Rect viewport, int contentHeight) {
+        if (this.maxHelpScroll <= 0 || viewport.height() <= 0) {
+            return;
         }
 
-        while (!prefix.isEmpty() && this.font.width(prefix + suffix) > targetWidth) {
-            prefix = prefix.substring(0, prefix.length() - 1);
+        int trackX = viewport.right() - 3;
+        int thumbHeight = Math.max(10, viewport.height() * viewport.height() / Math.max(1, contentHeight));
+        int thumbY = viewport.y()
+            + (viewport.height() - thumbHeight) * this.helpScrollOffset / this.maxHelpScroll;
+        fill(poseStack, trackX, viewport.y(), trackX + 2, viewport.bottom(), 0x55333333);
+        fill(poseStack, trackX, thumbY, trackX + 2, thumbY + thumbHeight, 0xFFAAAAAA);
+    }
+
+    private void enableScissor(ConnectionLayout.Rect viewport) {
+        double scale = this.minecraft.getWindow().getGuiScale();
+        int x = (int) Math.floor(viewport.x() * scale);
+        int y = (int) Math.floor((this.height - viewport.bottom()) * scale);
+        int width = (int) Math.ceil(viewport.width() * scale);
+        int height = (int) Math.ceil(viewport.height() * scale);
+        RenderSystem.enableScissor(x, y, width, height);
+    }
+
+    private boolean loadQrTexture(File qrFile) {
+        long modifiedAt = qrFile.lastModified();
+        if (qrTextureLocation != null && qrTextureModifiedAt == modifiedAt) {
+            return true;
         }
 
-        return prefix + ellipsis + suffix;
+        unloadQrTexture();
+
+        try (InputStream input = new FileInputStream(qrFile)) {
+            NativeImage image = NativeImage.read(input);
+            qrTextureWidth = image.getWidth();
+            qrTextureHeight = image.getHeight();
+            qrTextureLocation = this.minecraft.getTextureManager().register("dglabcraft_qrcode", new DynamicTexture(image));
+            qrTextureModifiedAt = modifiedAt;
+            return true;
+        } catch (IOException e) {
+            qrTextureLocation = null;
+            qrTextureModifiedAt = -1L;
+            return false;
+        }
+    }
+
+    private void unloadQrTexture() {
+        if (qrTextureLocation != null && this.minecraft != null) {
+            this.minecraft.getTextureManager().release(qrTextureLocation);
+        }
+        qrTextureLocation = null;
+        qrTextureModifiedAt = -1L;
+        qrTextureWidth = 0;
+        qrTextureHeight = 0;
+    }
+
+    @Override
+    public boolean mouseScrolled(double mouseX, double mouseY, double scrollY) {
+        ConnectionLayout.Layout layout = this.currentLayout != null
+            ? this.currentLayout
+            : ConnectionLayout.calculate(this.width, this.height);
+        if (layout.helpViewport().contains(mouseX, mouseY) && this.maxHelpScroll > 0) {
+            this.helpScrollOffset = DiagnosticLayout.scrollByWheel(
+                this.helpScrollOffset, scrollY, this.maxHelpScroll);
+            return true;
+        }
+        return super.mouseScrolled(mouseX, mouseY, scrollY);
+    }
+
+    @Override
+    public void removed() {
+        unloadQrTexture();
+        super.removed();
     }
 
     @Override
     public boolean isPauseScreen() {
         return true;
+    }
+
+    private static final class HelpLine {
+        private final FormattedCharSequence text;
+        private final int color;
+        private final int height;
+
+        private HelpLine(FormattedCharSequence text, int color, int height) {
+            this.text = text;
+            this.color = color;
+            this.height = height;
+        }
+
+        FormattedCharSequence text() { return text; }
+        int color() { return color; }
+        int height() { return height; }
     }
 }
